@@ -31,3 +31,6 @@ net.sf.jasperreports.export.html.frames.as.nested.tables=true
 
 # Apache Xalan XPath executers are used by default
 net.sf.jasperreports.xpath.executer.factory=net.sf.jasperreports.engine.util.xml.XalanXPathExecuterFactory
+
+# Use the standard XLS palette
+net.sf.jasperreports.export.xls.create.custom.palette=false
